--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.app-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    display: flex;
+    flex-direction: column;
+    background-color: red;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header img {
+    width: 5%;
+    height: 5%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.body {
+    display: flex;
+    width: 100%;
+    height: 90vh;
 }
 
-.App-link {
-  color: #61dafb;
+.nav {
+    display: flex;
+    background-color: green;
+    flex-direction: column;
+    width: 10%;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav a {
+    margin-top: 10px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    background-color: aquamarine;
+    width: 90%;
+}
+
+.content img {
+    width: 500px;
+    height: 200px;
 }
