--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -3,3 +3,22 @@
     height: 100px;
 }
 
+.body {
+    margin-top: 10px;
+    display: flex;
+}
+
+.logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content {
+    padding: 5px;
+    margin-left: 20px;
+    width: 400px;
+    height: 80px;
+    border: 1px solid gray;
+    border-radius: 20px 20px 20px 5px;
+}
