--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,29 @@
 .header {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     border-bottom: 2px solid;
 }
 
 .header img {
     width: 5%;
     margin-left: 2.5%;
+}
+
+.loginBlock {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 20px;
+    background-color: lightblue;
+    width: 70px;
+    height: 50px;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 10px;
+}
+
+.loginBlock a {
+    color: black;
+    text-decoration: none;
 }
